--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!Doctype HTML>
 <html>
-<h1>Hello dic</h1>
+<style>
+h1{
+  font-family: Arial;
+  color: Blue
+  font-size: 50px
+  }
+  
+  <h1>Welcome to the official website of Ninja-juce productions</h1>
+
 </html>
