--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ h1{
   color: Blue
   font-size: 50px
   }
-  
+  </style>
   <h1>Welcome to the official website of Ninja-juce productions</h1>
 
 </html>
