--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!Doctype HTML>
 <html>
+<body>
 <style>
 h1{
   font-family: Arial;
@@ -8,5 +9,5 @@ h1{
   }
   </style>
   <h1>Welcome to the official website of Ninja-juce productions</h1>
-
+  </body>
 </html>
