--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <style>
 h1{
   font-family: Arial;
-  color: Blue
-  font-size: 50px
+  color: Blue;
+  font-size: 50px;
   }
   </style>
   <h1>Welcome to the official website of Ninja-juce productions</h1>
   </body>
+  
 </html>
