--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ h1{
   font-size: 50px;
   }
   </style>
-  <h1>Welcome to the official website of Ninja-juce productions</h1>
+  <h1><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
+  <h2><i> We are a film group based in Wellington</i></h2>
   </body>
   
 </html>
