--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!Doctype HTML>
 <html>
-<body>
-<style>
-h1{
-  font-family: Arial;
-  color: Blue;
-  font-size: 50px;
-  }
-  </style>
-  <h1><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
-  <h2><i> We are a film group based in Wellington</i></h2>
+  <head>
+    <style>
+      h1{
+        font-family: Arial;
+        color: Blue;
+        font-size: 50px;
+        }
+    </style>
+  </head>
+  <body>
+    <img src="NJP-logo.png"></img>
+    <h1><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
+    <h2><i> We are a film group based in Wellington</i></h2>
   </body>
   
 </html>
