--- a/index.html
+++ b/index.html
@@ -3,15 +3,24 @@
   <head>
     <style>
       h1{
-        font-family: Arial;
-        color: Blue;
+        font-family: arial;
+        color: blue;
         font-size: 50px;
-        }
+      }
+      .epic {
+        
+      }
+      h2{
+        font-style: italics;
+        color: purple;
+        font-size: 30px;
+         
+      }
     </style>
   </head>
   <body>
     <img src="NJP-logo.png"></img>
-    <h1><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
+    <h1 class="epic"><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
     <h2><i> We are a film group based in Wellington</i></h2>
   </body>
   
