--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body>
-    <img src="NJP-logo.png"></img>
+    <img src="NJP-Logo.png"></img>
     <h1 class="epic"><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
     <h2><i> We are a film group based in Wellington</i></h2>
   </body>
