--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
         color: blue;
         font-size: 50px;
       }
-      .epic {
-        
-      }
+      
       h2{
         font-style: italics;
         color: purple;
@@ -20,7 +18,7 @@
   </head>
   <body>
     <img src="NJP-Logo.png"></img>
-    <h1 class="epic"><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
+    <h1><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
     <h2><i> We are a film group based in Wellington</i></h2>
   </body>
   
