--- a/index.html
+++ b/index.html
@@ -14,12 +14,20 @@
         font-size: 30px;
          
       }
+      .bio{
+        font-family: helvetica;
+        color: 
+      }
+      
     </style>
   </head>
   <body>
     <img src="NJP-Logo.png"></img>
     <h1><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
     <h2><i> We are a film group based in Wellington</i></h2>
+  <p class="bio"> check out our bio here></p>
+  <p2>
+  
   </body>
   
 </html>
