--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!Doctype HTML>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="/style.css"/>
     <style>
       h1{
         font-family: arial;
@@ -25,7 +26,7 @@
     <img src="NJP-Logo.png"></img>
     <h1><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
     <h2><i> We are a film group based in Wellington</i></h2>
-  <p class="bio"> check out our bio here></p>
+  <p class="bio"> check out our bio <a href="bio.html" class="owo">here</a></p>
   <p2>
   
   </body>
