--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         font-family: helvetica;
         color: 
       }
-      
+      .right {
+        float: right;
+      }
     </style>
   </head>
   <body>
@@ -27,6 +29,7 @@
     <h1><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
     <h2><i> We are a film group based in Wellington</i></h2>
   <p class="bio"> check out our bio <a href="bio.html" class="owo">here</a></p>
+  <img src="NJP-Logo.png" class="right"></img>
   <p2>
   
   </body>
