--- a/index.html
+++ b/index.html
@@ -16,11 +16,27 @@
          
       }
       .bio{
-        font-family: helvetica;
-        color: 
+        font-family: comic sans ms;
+        color: black;
+        font-size:35px;
       }
       .right {
         float: right;
+      }
+      p2{
+        font-family: helvetica;
+        color: black;
+        font-size:35px;
+      }
+      p3{
+         font-family: helvetica;
+        color: black;
+        font-size:35px;
+      }
+      p4{
+         font-family: helvetica;
+        color: black;
+        font-size:35px;
       }
     </style>
   </head>
@@ -30,7 +46,9 @@
     <h2><i> We are a film group based in Wellington</i></h2>
   <p class="bio"> check out our bio <a href="bio.html" class="owo">here</a></p>
   <img src="NJP-Logo.png" class="right"></img>
-  <p2>
+<p2>check out our team page</p2>
+<p3>check out our short films and upcoming movies</p3>
+<p4>Buy some merch</p4>
   
   </body>
   
