--- a/team.html
+++ b/team.html
@@ -3,10 +3,27 @@
 <head>
   <title>Our team</title>
   <style>
-  
+    .row {
+      display: flex;
+    }
+    .col {
+      flex: 1;
+    }
+    .cent {
+      align-items: center;
+      justify-content: center;
+    }
+    .member {
+      flex-direction: column;
+    }
   </style>
 </head>
 <body>
-
+  <div class="row cent">
+    <div class="col row">
+      <div class="col memeber"><a href="#"><img src="/"/></a><span class="name">William</span><p class="bio">Epic Gamer</p></div>
+      <div class="col memeber"><a href="#"><img src="/"/></a><span class="name">Zade</span><p class="bio">Epic Coder</p></div>
+    </div>
+  </div>
 </body>
 </html>
