--- a/team.html
+++ b/team.html
@@ -16,6 +16,14 @@
     .member {
       flex-direction: column;
     }
+    .bio {
+      font-style: italics;
+      font-size: 4vh;
+    }
+    .name {
+      font-style: bold;
+      font-size: 8vh;
+    }
   </style>
 </head>
 <body>
