--- a/team.html
+++ b/team.html
@@ -22,10 +22,10 @@
     }
     .bio {
       font-style: italics;
-      font-size: 1vh;
+      font-size: 2vh;
     }
     .name {
-      font-style: bold;
+      font-style: none;
       font-size: 4vh;
     }
   </style>
