--- a/team.html
+++ b/team.html
@@ -8,9 +8,9 @@
     }
     .row {
       display: flex;
-      flex-direction: row;
     }
     .col {
+      max-width: 50%;
       flex: 1;
     }
     .cent {
@@ -32,9 +32,9 @@
 </head>
 <body>
   <div class="row cent">
-    <div class="col row">
-      <div class="col memeber"><a href="#"><img src="/"/></a><span class="name">William</span><p class="bio">Epic Gamer</p></div>
-      <div class="col memeber"><a href="#"><img src="/"/></a><span class="name">Zade</span><p class="bio">Epic Coder</p></div>
+    <div class="col row"> vert
+      <div class="col memeber"><a href="#"><img src="/"/></a><span class="name">William</span><p class="bio">CEO, Film director</p></div>
+      <div class="col memeber"><a href="#"><img src="/"/></a><span class="name">Zade</span><p class="bio">Co-website developer</p></div>
     </div>
   </div>
 </body>
