--- a/team.html
+++ b/team.html
@@ -21,7 +21,7 @@
       flex-direction: column;
     }
     .bio {
-      font-style: italics;
+      font-style: italic;
       font-size: 2vh;
     }
     .name {
