--- a/team.html
+++ b/team.html
@@ -32,7 +32,7 @@
 </head>
 <body>
   <div class="row cent">
-    <div class="col row"> vert
+    <div class="col row">
       <div class="col memeber"><a href="https://github.com/wikham" target="_blank"><img src="https://github.com/wikham.png?size=2048"/></a><span class="name">William</span><p class="bio">CEO, Film director</p></div>
       <div class="col memeber"><a href="https://edazpotato.github.io" target="_blank"><img src="https://github.com/edazpotato.png?size=2048"/></a><span class="name">Zade</span><p class="bio">Co-website developer</p></div>
     </div>
