--- a/team.html
+++ b/team.html
@@ -28,6 +28,10 @@
       font-style: none;
       font-size: 4vh;
     }
+    .prof {
+      width: 10vh;
+      border-radius: 25%;
+    }
   </style>
 </head>
 <body>
