--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h1><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
     <h2><i> We are a film group based in Wellington</i></h2>
   <p class="bio"> check out our bio <a href="bio.html" class="owo">here</a></p>
-  <p2>check out our team page</p2>
+  <p2>check out our team page<a href="team.html">here</a></p2>
   <br>
 <p3>check out our short films and upcoming movies</p3>
   <br>
