--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <p class="bio"> check out our bio <a href="bio.html" class="owo">here</a></p>
   <p2>check out our team page<a href="team.html">here</a></p2>
   <br>
-<p3>check out our short films and upcoming movies</p3>
+  <p3>check out our short films and upcoming movies<a href="films.html">here</a></p3>
   <br>
 <p4>Buy some merch</p4>
   
