--- a/merch.html
+++ b/merch.html
@@ -2,4 +2,5 @@
 <html>
 <h1> Wanna buy some merch? Here you go</h1>
 <h2>Shirt</h2>
-<"img src="shirt"></img>
+<img src="shirt.jpeg"></img>
+<p>$20<a href=threadless.com>purchase</a></p>
