--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <br>
   <p3>check out our short films and upcoming movies<a href="films.html">here</a></p3>
   <br>
-<p4>Buy some merch</p4>
+  <p4>Buy some merch<a href="merch.html">here</a></p4>
   
   </body>
   
