--- a/merch.html
+++ b/merch.html
@@ -3,4 +3,4 @@
 <h1> Wanna buy some merch? Here you go</h1>
 <h2>Shirt</h2>
 <img src="shirt.jpeg"></img>
-<p>$20<a href=threadless.com>purchase</a></p>
+<p>$20<a href=https://www.threadless.com/>purchase</a></p>
