--- a/team.html
+++ b/team.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Our team</title>
+  <link href="/css/global.css" rel="stylesheet" type="text/css"/>
   <style>
     html, body, .row {
       height: 100%;
