--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!Doctype HTML>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/style.css"/>
+    <link href="/css/global.css" rel="stylesheet" type="text/css"/>
     <style>
       h1{
         font-family: arial;
