--- a/team.html
+++ b/team.html
@@ -4,20 +4,6 @@
   <title>Our team</title>
   <link href="/css/global.css" rel="stylesheet" type="text/css"/>
   <style>
-    html, body, .row {
-      height: 100%;
-    }
-    .row {
-      display: flex;
-    }
-    .col {
-      max-width: 50%;
-      flex: 1;
-    }
-    .cent {
-      align-items: center;
-      justify-content: center;
-    }
     .member {
       flex-direction: column;
     }
@@ -50,5 +36,9 @@
       </div>
     </div>
   </div>
+  <footer class="footer">
+    <input type="checkbox" class="darkmoder light"/>
+    <input type="checkbox" class="darkmoder dark"/>
+  </footer>
 </body>
 </html>
