--- a/team.html
+++ b/team.html
@@ -3,6 +3,7 @@
 <head>
   <title>Our team</title>
   <link href="/css/global.css" rel="stylesheet" type="text/css"/>
+  <link href="/css/grid.css" rel="stylesheet" type="text/css"/>
   <style>
     .member {
       flex-direction: column;
