--- a/team.html
+++ b/team.html
@@ -23,23 +23,25 @@
   </style>
 </head>
 <body>
-  <div class="row cent">
-    <div class="col row">
-      <div class="col memeber">
-        <a href="https://github.com/wikham" target="_blank"><img class="prof" src="https://github.com/wikham.png?size=2048"/></a>
-        <span class="name">William</span>
-        <p class="bio">CEO, Film director</p>
-      </div>
-      <div class="col memeber">
-        <a href="https://edazpotato.github.io" target="_blank"><img class="prof" src="https://github.com/edazpotato.png?size=2048"/></a>
-        <span class="name">Zade</span>
-        <p class="bio">Co-website developer</p>
+  <div class="wrapper">
+    <div class="row cent">
+      <div class="col row">
+        <div class="col memeber">
+          <a href="https://github.com/wikham" target="_blank"><img class="prof" src="https://github.com/wikham.png?size=2048"/></a>
+          <span class="name">William</span>
+          <p class="bio">CEO, Film director</p>
+        </div>
+        <div class="col memeber">
+          <a href="https://edazpotato.github.io" target="_blank"><img class="prof" src="https://github.com/edazpotato.png?size=2048"/></a>
+          <span class="name">Zade</span>
+          <p class="bio">Co-website developer</p>
+        </div>
       </div>
     </div>
+    <footer class="footer">
+      <input type="checkbox" class="darkmoder light"/>
+      <input type="checkbox" class="darkmoder dark"/>
+    </footer>
   </div>
-  <footer class="footer">
-    <input type="checkbox" class="darkmoder light"/>
-    <input type="checkbox" class="darkmoder dark"/>
-  </footer>
 </body>
 </html>
