--- a/team.html
+++ b/team.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <div class="row cent">
+    <div class="row wrapper cent">
       <div class="col row">
         <div class="col memeber">
           <a href="https://github.com/wikham" target="_blank"><img class="prof" src="https://github.com/wikham.png?size=2048"/></a>
