--- a/team.html
+++ b/team.html
@@ -19,6 +19,7 @@
     .prof {
       width: 10vh;
       border-radius: 25%;
+      border: 1px solid var(--text-color);
     }
   </style>
 </head>
