--- a/team.html
+++ b/team.html
@@ -27,15 +27,15 @@
   <div class="wrapper">
     <div class="row wrapper cent">
       <div class="col row">
-        <div class="col memeber">
-          <a href="https://github.com/wikham" target="_blank"><img class="prof" src="https://github.com/wikham.png?size=2048"/></a>
-          <span class="name">William</span>
-          <p class="bio">CEO, Film director</p>
+        <div class="col memeber row vert">
+          <a href="https://github.com/wikham" target="_blank" class="col"><img class="prof" src="https://github.com/wikham.png?size=2048"/></a>
+          <span class="name col">William</span>
+          <p class="bio col">CEO, Film director</p>
         </div>
-        <div class="col memeber">
-          <a href="https://edazpotato.github.io" target="_blank"><img class="prof" src="https://github.com/edazpotato.png?size=2048"/></a>
-          <span class="name">Zade</span>
-          <p class="bio">Co-website developer</p>
+        <div class="col memeber row vert">
+          <a href="https://edazpotato.github.io" target="_blank" class="col"><img class="prof" src="https://github.com/edazpotato.png?size=2048"/></a>
+          <span class="name col">Zade</span>
+          <p class="bio col">Co-website developer</p>
         </div>
       </div>
     </div>
