--- a/team.html
+++ b/team.html
@@ -26,7 +26,7 @@
 <body>
   <div class="wrapper">
     <div class="row wrapper cent">
-      <div class="col row">
+      <div class="col row members">
         <div class="col memeber row vert">
           <a href="https://github.com/wikham" target="_blank" class="col"><img class="prof" src="https://github.com/wikham.png?size=2048"/></a>
           <span class="name col">William</span>
