--- a/team.html
+++ b/team.html
@@ -6,7 +6,7 @@
   <link href="/css/grid.css" rel="stylesheet" type="text/css"/>
   <style>
     .member {
-      flex-direction: column;
+      max-width: 4vh;
     }
     .bio {
       font-style: italic;
@@ -26,13 +26,13 @@
 <body>
   <div class="wrapper">
     <div class="row wrapper cent">
-      <div class="col row members">
-        <div class="col memeber row vert">
+      <div class="col row members horis">
+        <div class="col member row vert">
           <a href="https://github.com/wikham" target="_blank" class="col"><img class="prof" src="https://github.com/wikham.png?size=2048"/></a>
           <span class="name col">William</span>
           <p class="bio col">CEO, Film director</p>
         </div>
-        <div class="col memeber row vert">
+        <div class="col member row vert">
           <a href="https://edazpotato.github.io" target="_blank" class="col"><img class="prof" src="https://github.com/edazpotato.png?size=2048"/></a>
           <span class="name col">Zade</span>
           <p class="bio col">Co-website developer</p>
