--- a/team.html
+++ b/team.html
@@ -3,7 +3,8 @@
 <head>
   <title>Our team</title>
   <link href="/css/global.css" rel="stylesheet" type="text/css"/>
-  <link href="/css/grid.css" rel="stylesheet" type="text/css"/>
+  <link href="/css/global.css" rel="stylesheet" type="text/css"/>
+  <link href="https://yarnpkg.com/en/package/normalize.css" rel="stylesheet" type="text/css"/>
   <style>
     .member {
       max-width: 4vh;
