--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     <img src="NJP-Logo.png"></img>
     <h1><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
     <h2><i> We are a film group based in Wellington</i></h2>
-  <p> class="bio"> check out our bio <a href="bio.html" class="owo">here</a></p>
-  <p2>check out our team page<a href="team.html">here</a></p2>
+  <p> class="bio"> check out our bio <a href="bio.html" class="link">here</a></p>
+  <p2>check out our team page<a href="team.html" class="link">here</a></p2>
   <br>
-  <p3>check out our short films and upcoming movies<a href="films.html">here</a></p3>
+  <p3>check out our short films and upcoming movies<a href="films.html" class="link">here</a></p3>
   <br>
-  <p4>Buy some merch<a href="merch.html">here</a></p4>
+  <p4>Buy some merch<a href="merch.html" class="link">here</a></p4>
   
   </body>
   
