--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link href="/css/global.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/grid.css" rel="stylesheet" type="text/css"/>
     <style>
       h1{
         font-family: arial;
@@ -21,17 +22,17 @@
         font-size:35px;
       }
       
-      p2{
+      p.2{
         font-family: helvetica;
         color: black;
         font-size:35px;
       }
-      p3{
+      p.3{
          font-family: helvetica;
         color: black;
         font-size:35px;
       }
-      p4{
+      p.4{
          font-family: helvetica;
         color: black;
         font-size:35px;
@@ -39,16 +40,14 @@
     </style>
   </head>
   <body>
-    <img src="NJP-Logo.png"></img>
+    <img src="/assets/images/NJP-Logo.png"></img>
     <h1><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
     <h2><i> We are a film group based in Wellington</i></h2>
-  <p> class="bio"> check out our bio <a href="bio.html" class="link">here</a></p>
-  <p2>check out our team page<a href="team.html" class="link">here</a></p2>
-  <br>
-  <p3>check out our short films and upcoming movies<a href="films.html" class="link">here</a></p3>
-  <br>
-  <p4>Buy some merch<a href="merch.html" class="link">here</a></p4>
-  
+    <p> class="bio"><a href="about.html" class="link">About us</a></p>
+    <p class="2">check out our team page<a href="team.html" class="link">here</a></p2>
+    <br>
+    <p class="3">check out our short films and upcoming movies<a href="films.html" class="link">here</a></p3>
+    <br>
+    <p class="4">Buy some merch<a href="merch.html" class="link">here</a></p4>
   </body>
-  
 </html>
