--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <img src="/assets/images/NJP-Logo.png"></img>
     <h1><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
     <h2><i> We are a film group based in Wellington</i></h2>
-    <p> class="bio"><a href="about.html" class="link">About us</a></p>
+    <p class="bio"><a href="about.html" class="link">About us</a></p>
     <p class="2">check out our team page<a href="team.html" class="link">here</a></p2>
     <br>
     <p class="3">check out our short films and upcoming movies<a href="films.html" class="link">here</a></p3>
