--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     </style>
   </head>
   <body>
-    <div class="wrapper">
-      <header class="header">
+    <div class="wrapper row vert">
+      <header class="header col">
         <img src="/assets/images/NJP-Logo.png"></img>
         <h1><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
       </header>
-      <div class="main">
+      <div class="main col">
         <h2><i> We are a film group based in Wellington</i></h2>
         <p class="bio"><a href="about.html" class="link">About us</a></p>
         <p class="2"><a href="team.html" class="link">Our team</a></p>
@@ -54,7 +54,7 @@
         <br>
         <p class="4">Buy some merch<a href="merch.html" class="link">here</a></p>
       </div>
-      <footer class="footer">
+      <footer class="footer col">
 
       </footer>
     </div>
