--- a/index.html
+++ b/index.html
@@ -40,19 +40,21 @@
     </style>
   </head>
   <body>
-    <div class="wrapper row vert">
-      <header class="header col">
-        <img src="/assets/images/NJP-Logo.png"></img>
-        <h1><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
+    <div class="wrapper row vert cent-v">
+      <header class="header col row vert">
+        <div class="col">
+          <img src="/assets/images/NJP-Logo.png"></img>
+          <h1><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
+        </div>
+      <nav class="nav col">
+        <a href="about.html" class="link">About us</a>
+        <a href="team.html" class="link">Our team</a>
+        <a href="films.html" class="link">Comming soon</a></p>
+        <a href="merch.html" class="link">Merch</a>
+      </nav>
       </header>
       <div class="main col">
         <h2><i> We are a film group based in Wellington</i></h2>
-        <p class="bio"><a href="about.html" class="link">About us</a></p>
-        <p class="2"><a href="team.html" class="link">Our team</a></p>
-        <br>
-        <p class="3">check out our <a href="films.html" class="link">upcoming short films & movies</a></p>
-        <br>
-        <p class="4">Buy some merch<a href="merch.html" class="link">here</a></p>
       </div>
       <footer class="footer col">
 
