--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
     <div class="wrapper row vert cent-v">
       <header class="header col row vert">
         <div class="col">
-          <img src="/assets/images/NJP-Logo.png"></img>
-          <h1><strong>Welcome to the official website of Ninja-juce productions</strong></h1>
+          <img src="/assets/images/NJP-Logo.png"/>
+          <h1>Welcome to the official website of Ninja-juce productions</h1>
         </div>
-      <nav class="nav col">
-        <a href="about.html" class="link">About us</a>
-        <a href="team.html" class="link">Our team</a>
-        <a href="films.html" class="link">Comming soon</a></p>
-        <a href="merch.html" class="link">Merch</a>
-      </nav>
+        <nav class="nav col">
+          <a href="about.html" class="link">About us</a>
+          <a href="team.html" class="link">Our team</a>
+          <a href="films.html" class="link">Comming soon</a>
+          <a href="merch.html" class="link">Merch</a>
+        </nav>
       </header>
       <div class="main col">
         <h2><i> We are a film group based in Wellington</i></h2>
