--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <link href="/css/global.css" rel="stylesheet" type="text/css"/>
     <link href="/css/grid.css" rel="stylesheet" type="text/css"/>
     <style>
+      /*
       h1{
         font-family: arial;
         color: blue;
-        /*font-size: 50px;*/
+        font-size: 50px;
       }
       
       h2{
@@ -37,6 +38,7 @@
         color: black;
         font-size:35px;
       }
+      */
       .top {
         color: var(--bg-color);
         background-color: var(--font-color);
