--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
           <a href="merch.html" class="link">Merch</a>
         </nav>
       </header>
-      <div class="main col">
+      <div class="main col center">
         <h2><i> We are a film group based in Wellington</i></h2>
       </div>
       <footer class="footer col">
-
+        
       </footer>
     </div>
   </body>
