--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
   <body>
     <div class="wrapper row vert cent-v">
       <header class="header col row vert">
-        <div class="col top">
-          <img src="/assets/images/NJP-Logo.png"/>
-          <h1>Welcome to the official website of Ninja-juce productions</h1>
+        <div class="col top row vert cent">
+          <img src="/assets/images/NJP-Logo.png" class="col"/>
+          <h1 class="col">Welcome to the official website of Ninja-juce productions</h1>
         </div>
         <nav class="nav col cent">
           <a href="about.html" class="link">About us</a> | 
