--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="wrapper row vert cent-v">
       <header class="header col row vert">
         <div class="col top row vert cent">
-          <img src="/assets/images/NJP-Logo.png" class="col"/>
+          <img src="/assets/images/NJP-Logo.png" class="col titleimg"/>
           <h1 class="col">Welcome to the official website of Ninja-juce productions</h1>
         </div>
         <nav class="nav col cent">
