--- a/index.html
+++ b/index.html
@@ -44,13 +44,16 @@
         background-color: var(--font-color);
         height: 10vh;
       }
+      .topimg {
+        background-color: var(--font-color);
+      }
     </style>
   </head>
   <body>
     <div class="wrapper row vert cent-v">
       <header class="header col row vert">
         <div class="col top row vert cent">
-          <img src="/assets/images/NJP-Logo.png" class="col titleimg"/>
+          <img src="/assets/images/NJP-Logo.png" class="col topimg"/>
           <h1 class="col">Welcome to the official website of Ninja-juce productions</h1>
         </div>
         <nav class="nav col cent">
