--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="nav col cent">
           <a href="about.html" class="link">About us</a> | 
           <a href="team.html" class="link">Our team</a> | 
-          <a href="films.html" class="link">Coming soon</a> | 
+          <a href="films.html" class="link">Short films</a> | 
           <a href="merch.html" class="link">Merch</a>
         </nav>
       </header>
