--- a/about.html
+++ b/about.html
@@ -1,5 +1,18 @@
 <!Doctype Html>
 <html>
-<h1> here is our bio about our company</h1>
-<p>lorem ipsum dolor sit amen het gibba gabba assy wassy</p>
+<style>
+h1{
+font-family: Helvetica;
+color:red;
+font-size:35px;
+  }
+p{
+font-family: comic sans ms;
+color: green;
+ font-size:45px;
+  }
+<h1> here is our bio about our company</h1> 
+<p>Originally founded in 2018 (Operations didn't begin till 2019). Ninja juce productions is a film company based in Wellington, 
+  New Zealand. Founded by William Ormsby McInnes.</p>
+  </style>
 </html>
