--- a/films.html
+++ b/films.html
@@ -1,5 +1,9 @@
 <!Doctype Html>
 <html>
+    <div class="wrapper row vert cent-v">
+      <header class="header col row vert">
+        <div class="col top row vert cent">
+          <img src="/assets/images/NJP-Logo.png" class="col topimg"/>
 <body>
   <iframe width="420" height="345"
   src="https://www.youtube.com/embed/tgbNymZ7vqY">
