--- a/films.html
+++ b/films.html
@@ -1,11 +1,8 @@
 <!Doctype Html>
 <html>
-    <div class="wrapper row vert cent-v">
-      <header class="header col row vert">
-        <div class="col top row vert cent">
-          <img src="/assets/images/NJP-Logo.png" class="col topimg"/>
+<img src="/assets/images/NJP-Logo.png">
 <body>
-  <iframe width="420" height="345"
+  <iframe width="320" height="255"
   src="https://www.youtube.com/embed/tgbNymZ7vqY">
   </iframe>
   </body>
