--- a/films.html
+++ b/films.html
@@ -1,9 +1,9 @@
 <!Doctype Html>
 <html>
-<img src="/assets/images/NJP-Logo.png">
 <body>
-  <iframe width="320" height="255"
+  <iframe width="420" height="345"
   src="https://www.youtube.com/embed/tgbNymZ7vqY">
   </iframe>
+  <img src="/assets/images/NJP-Logo.png"></img>
   </body>
 </html>
