--- a/films.html
+++ b/films.html
@@ -4,6 +4,6 @@
   <iframe width="420" height="345"
   src="https://www.youtube.com/embed/tgbNymZ7vqY">
   </iframe>
-  <img src="/assets/images/NJP-Logo.png"></img>
+  <img src="NJP-Logo.png" style="position: absolute; top"></img>
   </body>
 </html>
