--- a/about.html
+++ b/about.html
@@ -1,18 +1,44 @@
 <!Doctype Html>
 <html>
-<style>
-h1{
-font-family: Helvetica;
-color:red;
-font-size:35px;
-  }
-p{
-font-family: comic sans ms;
-color: green;
- font-size:45px;
-  }
-  </style>
-<h1> here is our bio about our company</h1> 
-<p>Originally founded in 2018 (Operations didn't begin till 2019). Ninja juce productions is a film company based in Wellington, 
-  New Zealand. Founded by William Ormsby McInnes.</p>
+  <head>
+    <link href="https://yarnpkg.com/en/package/normalize.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/global.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/global.css" rel="stylesheet" type="text/css"/>
+    <style>
+    h1{
+    font-family: Helvetica;
+    color:red;
+    font-size:35px;
+      }
+    p{
+    font-family: comic sans ms;
+    color: green;
+     font-size:45px;
+      }
+      </style>
+  </head>
+  <body>
+    <div class="wrapper row vert cent-v">
+      <header class="header col row vert">
+        <div class="col top row vert cent">
+          <img src="/assets/images/NJP-Logo.png" class="col topimg">
+          <h1 class="col">Welcome to the official website of Ninja-juce productions</h1>
+        </div>
+        <nav class="nav col cent">
+          <a href="about.html" class="link">About us</a> | 
+          <a href="team.html" class="link">Our team</a> | 
+          <a href="films.html" class="link">Short films</a> | 
+          <a href="merch.html" class="link">Merch</a>
+        </nav>
+      </header>
+      <div class="main col center">
+        <h1> here is our bio about our company</h1> 
+      <p>Originally founded in 2018 (Operations didn't begin till 2019). Ninja juce productions is a film company based in Wellington, 
+        New Zealand. Founded by William Ormsby McInnes.</p>
+      </div>
+      <footer class="footer col">
+        
+      </footer>
+    </div>
+  </body>
 </html>
