--- a/about.html
+++ b/about.html
@@ -5,17 +5,17 @@
     <link href="/css/global.css" rel="stylesheet" type="text/css"/>
     <link href="/css/global.css" rel="stylesheet" type="text/css"/>
     <style>
-    h1{
-    font-family: Helvetica;
-    color:red;
-    font-size:35px;
+      .mySpecialH1{
+        font-family: Helvetica;
+        color:red;
+        font-size:35px;
       }
-    p{
-    font-family: comic sans ms;
-    color: green;
-     font-size:45px;
-      }
-      </style>
+      .mySpecialP{
+        font-family: comic sans ms;
+        color: green;
+        font-size:45px;
+    }
+    </style>
   </head>
   <body>
     <div class="wrapper row vert cent-v">
@@ -32,8 +32,8 @@
         </nav>
       </header>
       <div class="main col center">
-        <h1> here is our bio about our company</h1> 
-      <p>Originally founded in 2018 (Operations didn't begin till 2019). Ninja juce productions is a film company based in Wellington, 
+        <h1 class="mySpecialH1"> here is our bio about our company</h1> 
+      <p class="mySpecialP">Originally founded in 2018 (Operations didn't begin till 2019). Ninja juce productions is a film company based in Wellington, 
         New Zealand. Founded by William Ormsby McInnes.</p>
       </div>
       <footer class="footer col">
