--- a/merch.html
+++ b/merch.html
@@ -1,6 +1,38 @@
-<!Doctype Html>
+<!Doctype HTML>
 <html>
-<h1> Wanna buy some merch? Here you go</h1>
-<h2>Shirt</h2>
-<img src="shirt.jpeg"></img>
-<p>$20<a href=https://www.threadless.com/>purchase</a></p>
+  <head>
+    <!--css-->
+    <link href="/css/global.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/grid.css" rel="stylesheet" type="text/css"/>
+    <!--meta tags-->
+    <title>Merch | Ninja Juce productions</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  </head>
+  <body>
+    <div class="wrapper row vert cent-v">
+      <header class="header col row vert">
+        <div class="col top row vert cent">
+          <img src="/assets/images/NJP-Logo.png" class="col topimg"/>
+          <h1 class="col">Welcome to the official website of Ninja-juce productions</h1>
+        </div>
+        <nav class="nav col cent">
+          <a href="about.html" class="link">About us</a> | 
+          <a href="team.html" class="link">Our team</a> | 
+          <a href="films.html" class="link">Short films</a> | 
+          <a href="merch.html" class="link">Merch</a>
+        </nav>
+      </header>
+      <div class="main col row center">
+        <div class="col cent contentTitle">
+          <h3>Merch</h3>
+        </div>
+        <div class="col cent contentArticle">
+          <p>We have some <stron>Epic merch</stong>. Go get it <a class="link" href="https://edaz.threadless.com/">here</a></p>
+        </div>
+      </div>
+      <footer class="footer col">
+        
+      </footer>
+    </div>
+  </body>
+</html>
