--- a/about.html
+++ b/about.html
@@ -4,18 +4,6 @@
     <link href="https://yarnpkg.com/en/package/normalize.css" rel="stylesheet" type="text/css"/>
     <link href="/css/global.css" rel="stylesheet" type="text/css"/>
     <link href="/css/global.css" rel="stylesheet" type="text/css"/>
-    <style>
-      .mySpecialH1{
-        font-family: Helvetica;
-        color:red;
-        font-size:35px;
-      }
-      .mySpecialP{
-        font-family: comic sans ms;
-        color: green;
-        font-size:45px;
-    }
-    </style>
   </head>
   <body>
     <div class="wrapper row vert cent-v">
@@ -32,9 +20,8 @@
         </nav>
       </header>
       <div class="main col center">
-        <h1 class="mySpecialH1"> here is our bio about our company</h1> 
-      <p class="mySpecialP">Originally founded in 2018 (Operations didn't begin till 2019). Ninja juce productions is a film company based in Wellington, 
-        New Zealand. Founded by William Ormsby McInnes.</p>
+        <h1> here is our bio about our company</h1> 
+        <p>Originally founded in 2018 (Operations didn't begin till 2019). Ninja juce productions is a film company based in Wellington, New Zealand. Founded by William Ormsby McInnes.</p>
       </div>
       <footer class="footer col">
         
