--- a/merch.html
+++ b/merch.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <!--css-->
+    <link href="https://yarnpkg.com/en/package/normalize.css" rel="stylesheet" type="text/css"/>
     <link href="/css/global.css" rel="stylesheet" type="text/css"/>
     <link href="/css/grid.css" rel="stylesheet" type="text/css"/>
     <!--meta tags-->
