--- a/about.html
+++ b/about.html
@@ -1,9 +1,13 @@
 <!Doctype Html>
 <html>
   <head>
+    <!--css-->
     <link href="https://yarnpkg.com/en/package/normalize.css" rel="stylesheet" type="text/css"/>
     <link href="/css/global.css" rel="stylesheet" type="text/css"/>
-    <link href="/css/global.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/grid.css" rel="stylesheet" type="text/css"/>
+    <!--meta tags-->
+    <title>About us | Ninja Juce productions</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
   </head>
   <body>
     <div class="wrapper row vert cent-v">
