--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <!--css-->
+    <link href="https://yarnpkg.com/en/package/normalize.css" rel="stylesheet" type="text/css"/>
     <link href="/css/global.css" rel="stylesheet" type="text/css"/>
     <link href="/css/grid.css" rel="stylesheet" type="text/css"/>
     <!--meta tags-->
-    <title>Ninja Juce productions</title>
+    <title>Home | Ninja Juce productions</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
   </head>
   <body>
