--- a/merch.html
+++ b/merch.html
@@ -17,10 +17,13 @@
           <h1 class="col">Welcome to the official website of Ninja-juce productions</h1>
         </div>
         <nav class="nav col cent">
-          <a href="about.html" class="link">About us</a> | 
-          <a href="team.html" class="link">Our team</a> | 
-          <a href="films.html" class="link">Short films</a> | 
-          <a href="merch.html" class="link">Merch</a>
+          <nav class="nav col cent">
+          <a href="/" class="link">Home</a> |
+          <a href="/about.html" class="link">About us</a> | 
+          <a href="/team.html" class="link">Our team</a> | 
+          <a href="/films.html" class="link">Short films</a> | 
+          <a href="/merch.html" class="link">Merch</a>
+        </nav>
         </nav>
       </header>
       <div class="main col row center">
