--- a/merch.html
+++ b/merch.html
@@ -26,12 +26,16 @@
         </nav>
         </nav>
       </header>
-      <div class="main col row center">
+      <div class="main col row vert center">
         <div class="col cent contentTitle">
           <h3>Merch</h3>
         </div>
         <div class="col cent contentArticle">
-          <p>We have some <stron>Epic merch</stong>. Go get it <a class="link" href="https://edaz.threadless.com/">here</a></p>
+          <p>We have some <stron>Epic merch</stong>. Go get it! <br/>
+            <a class="link" href="https://edaz.threadless.com/designs/ninja-juce-productions-t-shirt" target="_blank">
+              <img src="/assets/images/njp-t-shirt-landscape-new-product.png" title="New t-shirt out now" alt="NJP t-shirt"/>
+            </a>
+          </p>
         </div>
       </div>
       <footer class="footer col">
