--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
           <h1 class="col">Welcome to the official website of Ninja-juce productions</h1>
         </div>
         <nav class="nav col cent">
+          <a href="/" class="link">Home</a> | 
           <a href="about.html" class="link">About us</a> | 
           <a href="team.html" class="link">Our team</a> | 
           <a href="films.html" class="link">Short films</a> | 
