--- a/merch.html
+++ b/merch.html
@@ -33,7 +33,7 @@
         <div class="col cent contentArticle">
           <p>We have some <stron>Epic merch</stong>. Go get it! <br/>
             <a class="link" href="https://edaz.threadless.com/designs/ninja-juce-productions-t-shirt" target="_blank">
-              <img src="/assets/images/njp-t-shirt-landscape-new-product.png" title="New t-shirt out now" alt="NJP t-shirt"/>
+              <img src="/assets/images/njp-t-shirt-landscape-new-product.png" title="New t-shirt out now" alt="NJP t-shirt" style="width: 10vh;"/>
             </a>
           </p>
         </div>
