--- a/films.html
+++ b/films.html
@@ -1,11 +1,49 @@
-<!Doctype Html>
+<!Doctype HTML>
 <html>
- <h1>Drunk Police</h1>
- <body>
- <iframe width="560" height="315" 
-  src="https://www.youtube.com/embed/6Fddy8AsOtA" 
-   frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-  </iframe>
-
+  <head>
+    <!--css-->
+    <link href="https://yarnpkg.com/en/package/normalize.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/global.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/grid.css" rel="stylesheet" type="text/css"/>
+    <!--meta tags-->
+    <title>Short films | Ninja Juce productions</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  </head>
+  <body>
+    <div class="wrapper row vert cent-v">
+      <header class="header col row vert">
+        <div class="col top row vert cent">
+          <img src="/assets/images/NJP-Logo.png" class="col topimg"/>
+          <h1 class="col">Welcome to the official website of Ninja-juce productions</h1>
+        </div>
+        <nav class="nav col cent">
+          <a href="/" class="link">Home</a> |
+          <a href="/about.html" class="link">About us</a> | 
+          <a href="/team.html" class="link">Our team</a> | 
+          <a href="/films.html" class="link">Short films</a> | 
+          <a href="/merch.html" class="link">Merch</a>
+        </nav>
+      </header>
+      <div class="main col row vert center">
+        <h2>Our short films:</h2>
+        <div class="col row vert films wrap thin">
+         <div class="col film">
+          <h4>Drunk Police</h1>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/6Fddy8AsOtA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         </div>
+         <div class="col film">
+          <h4>Another film</h1>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/6Fddy8AsOtA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         </div>
+         <div class="col film">
+          <h4>Yet another one</h1>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/6Fddy8AsOtA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         </div>
+         </div>
+      </div>
+      <footer class="footer col">
+        
+      </footer>
+    </div>
   </body>
 </html>
