--- a/about.html
+++ b/about.html
@@ -26,6 +26,12 @@
       </header>
       <div class="main col center">
         <h1> here is our bio about our company</h1> 
+        <style>
+        p{
+        font-family: helvetica;
+        color: green;
+        font-size: 20px;
+          }
         <p>Originally founded in 2018 (Operations didn't begin till 2019). Ninja juce productions is a film company based in Wellington, New Zealand. Founded by William Ormsby McInnes.</p>
       </div>
       <footer class="footer col">
