--- a/films.html
+++ b/films.html
@@ -28,12 +28,12 @@
         <h2>Our short films:</h2>
         <div class="col row vert films wrap thin">
          <div class="col film">
-          <h1>Drunk Police</h1>
+          <h3>Drunk Police</h3>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/6Fddy8AsOtA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          </div>
-          <h1> A journey far from home</h1>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/1rEoSAxJbsw" 
-           frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-         
+          <div class="col film">
+          <h3>A journey far from home</h3>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/1rEoSAxJbsw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         </div>
   </body>
 </html>
