--- a/about.html
+++ b/about.html
@@ -5,6 +5,13 @@
     <link href="https://yarnpkg.com/en/package/normalize.css" rel="stylesheet" type="text/css"/>
     <link href="/css/global.css" rel="stylesheet" type="text/css"/>
     <link href="/css/grid.css" rel="stylesheet" type="text/css"/>
+     <style>
+        p{
+        font-family: helvetica;
+        color: green;
+        font-size: 20px;
+          }
+    </style>
     <!--meta tags-->
     <title>About us | Ninja Juce productions</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -26,13 +33,7 @@
       </header>
       <div class="main col center">
         <h1> here is our bio about our company</h1> 
-        <style>
-        p{
-        font-family: helvetica;
-        color: green;
-        font-size: 20px;
-          }
-        <p>Originally founded in 2018 (Operations didn't begin till 2019). Ninja juce productions is a film company based in Wellington, New Zealand. Founded by William Ormsby McInnes.</p>
+        <p class="bio">Originally founded in 2018 (Operations didn't begin till 2019). <br>Ninja juce productions is a film company based in Wellington, New Zealand. Founded by William Ormsby McInnes.</p>
       </div>
       <footer class="footer col">
         
