--- a/films.html
+++ b/films.html
@@ -28,7 +28,7 @@
         <h2>Upcoming movie</h2>
         <h2>Our short films:</h2>
         <div class="col row vert films wrap thin">
-         <div class="col film">
+         <div class="col film row vert">
            <h3>Drunk Police</h3>
            <img src="/assets/images/drunk police 2 poster-1.jpg"</img>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/6Fddy8AsOtA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
