--- a/animation.html
+++ b/animation.html
@@ -6,4 +6,10 @@ font-family: candara;
 }
 <h1>This is our animation Website for NJP animations and gifs. Made by Scream Animations (Operations ceased)
 </style>
+  <h1>Lego Casino</h1>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLSY-d9Dgi4y3tNtUGtUxoO0G-efMwdB8a" 
+frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <h1>Ice punk</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ZgBTkafX-JA" 
+frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </html>
