--- a/films.html
+++ b/films.html
@@ -25,6 +25,7 @@
         </nav>
       </header>
       <div class="main col row vert center">
+        <a href="/animation.html">Go to animation page</a>
         <h2>Upcoming movie</h2>
         <h2>Our short films:</h2>
         <div class="col row vert films wrap thin">
