--- a/animation.html
+++ b/animation.html
@@ -1,5 +1,16 @@
 <!Doctype html>
 <html>
+<div class="col top row vert cent">
+          <img src="/assets/images/NJP-Logo.png" class="col topimg">
+          <h1 class="col">Welcome to the official website of Ninja-juce productions</h1>
+        </div>
+  <nav class="nav col cent">
+          <a href="/" class="link">Home</a> |
+          <a href="/about.html" class="link">About us</a> | 
+          <a href="/team.html" class="link">Our team</a> | 
+          <a href="/films.html" class="link">Short films</a> | 
+          <a href="/merch.html" class="link">Merch</a>
+        </nav>
 <style>
 h1{
 font-family: candara;
