--- a/gif.html
+++ b/gif.html
@@ -1,2 +1,7 @@
 <!Doctype html>
 <html>
+<img src="/assets/images/gifhubb.jpeg">
+<img src="/assets/images/cursor .gif">
+<img src="/assets/images/Loading gif.gif">
+<img src="/assets/images/water ripple.gif">
+<img src="/assets/images/color pattern clone.gif">
