--- a/animation.html
+++ b/animation.html
@@ -1,5 +1,15 @@
 <!Doctype html>
 <html>
+           <head>
+    <!--css-->
+    <link href="https://yarnpkg.com/en/package/normalize.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/global.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/grid.css" rel="stylesheet" type="text/css"/>
+    <!--meta tags-->
+    <title>Short films | Ninja Juce productions</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  </head>
+  <body>
 <div class="col top row vert cent">
           <img src="/assets/images/NJP-Logo.png" class="col topimg">
           <h1 class="col">Welcome to the official website of Ninja-juce productions</h1>
@@ -11,16 +21,19 @@
           <a href="/films.html" class="link">Short films</a> | 
           <a href="/merch.html" class="link">Merch</a>
         </nav>
+          
 <style>
 h1{
 font-family: candara;
 }
-<h1>This is our animation Website for NJP animations and gifs. Made by Scream Animations (Operations ceased)
-</style>
-  <h1>Lego Casino</h1>
+          </style>
+         <h1>This is our animation Website for NJP animations and gifs. Made by Scream Animations (Operations ceased)
+<h1>Lego Casino</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLSY-d9Dgi4y3tNtUGtUxoO0G-efMwdB8a" 
 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <h1>Ice punk</h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ZgBTkafX-JA" 
 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</html>
+       </body>
+   </html>
+            
