--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <a href="/team.html" class="link">Our team</a> | 
           <a href="/films.html" class="link">Short films</a> | 
           <a href="/merch.html" class="link">Merch</a>
+          <a href="/animation.html" class="link">Animation</a>
         </nav>
       </header>
       <div class="main col center">
