--- a/team.html
+++ b/team.html
@@ -1,49 +1,36 @@
-<!DOCTYPE html>
+<!Doctype HTML>
 <html>
-<head>
-  <title>Our team</title>
-  <link href="https://yarnpkg.com/en/package/normalize.css" rel="stylesheet" type="text/css"/>
-  <link href="/css/global.css" rel="stylesheet" type="text/css"/>
-  <link href="/css/global.css" rel="stylesheet" type="text/css"/>
-  <style>
-    .member {
-      max-width: 4vh;
-    }
-    .bio {
-      font-style: italic;
-      font-size: 2vh;
-    }
-    .name {
-      font-style: none;
-      font-size: 4vh;
-    }
-    .prof {
-      width: 10vh;
-      border-radius: 25%;
-      border: 1px solid var(--font-color);
-    }
-  </style>
-</head>
-<body>
-  <div class="wrapper">
-    <div class="row wrapper cent">
-      <div class="col row members horis">
-        <div class="col member row vert">
-          <a href="https://github.com/wikham" target="_blank" class="col"><img class="prof" src="https://github.com/wikham.png?size=2048"/></a>
-          <span class="name col">William</span>
-          <p class="bio col">CEO, Film director</p>
+  <head>
+    <!--css-->
+    <link href="https://yarnpkg.com/en/package/normalize.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/global.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/grid.css" rel="stylesheet" type="text/css"/>
+    <!--meta tags-->
+    <title>Home | Ninja Juce productions</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  </head>
+  <body>
+    <div class="wrapper row vert cent-v">
+      <header class="header col row vert">
+        <div class="col top row vert cent">
+          <img src="/assets/images/NJP-Logo.png" class="col topimg"/>
+          <h1 class="col">Welcome to the official website of Ninja-juce productions</h1>
         </div>
-        <div class="col member row vert">
-          <a href="https://edazpotato.github.io" target="_blank" class="col"><img class="prof" src="https://github.com/edazpotato.png?size=2048"/></a>
-          <span class="name col">Zade</span>
-          <p class="bio col">Co-website developer</p>
-        </div>
+        <nav class="nav col cent">
+          <a href="/" class="link">Home</a> |
+          <a href="/about.html" class="link">About us</a> | 
+          <a href="/team.html" class="link">Our team</a> | 
+          <a href="/films.html" class="link">Short films</a> | 
+          <a href="/merch.html" class="link">Merch</a>
+          <a href="/animation.html" class="link">Animation</a>
+        </nav>
+      </header>
+      <div class="main col center">
+        <h2><i> We are a film group based in Wellington</i></h2>
       </div>
+      <footer class="footer col">
+        
+      </footer>
     </div>
-    <footer class="footer">
-      <input type="checkbox" class="darkmoder light"/>
-      <input type="checkbox" class="darkmoder dark"/>
-    </footer>
-  </div>
-</body>
+  </body>
 </html>
