--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="/about.html" class="link">About us</a> | 
           <a href="/team.html" class="link">Our team</a> | 
           <a href="/films.html" class="link">Short films</a> | 
-          <a href="/merch.html" class="link">Merch</a>
+          <a href="/merch.html" class="link">Merch</a> | 
           <a href="/animation.html" class="link">Animation</a>
         </nav>
       </header>
