--- a/about.html
+++ b/about.html
@@ -28,7 +28,8 @@
           <a href="about.html" class="link">About us</a> | 
           <a href="team.html" class="link">Our team</a> | 
           <a href="films.html" class="link">Short films</a> | 
-          <a href="merch.html" class="link">Merch</a>
+          <a href="merch.html" class="link">Merch</a> |
+          <a href="/animation.html" class="link">Animation</a>
         </nav>
       </header>
       <div class="main col center">
