--- a/404.html
+++ b/404.html
@@ -1,9 +1,10 @@
  <!Doctype html>
 <html>
- <style>   
+   
  <body style="background-color:black;">                    
      <h1>Uh-oh 404 page not found</h1>
      <p>Click the links below to find the right page</p>
+   <style>
      h1
   {
    font-family: Helvetica;
@@ -15,7 +16,8 @@
    font-family: impact;
    font-size:40px;
    color: blue;
-  }
+    }
+  </style>
    <div class="wrapper row vert cent-v">
       <header class="header col row vert">
         <div class="col top row vert cent">
