--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,4 +1,5 @@
 <!Doctype html>
 <html>
 <h1>My Portfolio</h1>
+<p>This is where I put either school/work/unfinished projects here before being released on my website</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/n_3ycY6WJis" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
