--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,5 +1,6 @@
 <!Doctype html>
 <html>
-<h1>My Portfolio</h1>
+<h1>My Portfolio</h1> 
+  <a href="animation.html" class="link">animation portfolio</a>
 <p>This is where I put either school/work/unfinished projects here before being released on my website</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/n_3ycY6WJis" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
