--- a/Portfolio/animations.html
+++ b/Portfolio/animations.html
@@ -1,3 +1,4 @@
 <!Doctype html>
 <html> 
 <h1>This is where I put all my animation projects.</h1>
+ <a href="index.html" class="link">animation portfolio</a>
