--- a/Portfolio/animations.html
+++ b/Portfolio/animations.html
@@ -2,3 +2,4 @@
 <html> 
 <h1>This is where I put all my animation projects.</h1>
  <a href="index.html" class="link">animation portfolio</a>
+ <img src="/assets/images/bouncing-ball-gif-4.gif">
