--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <!--meta tags-->
     <title>Home | Ninja Juce productions</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <style>
+        h1 {
+           font-family:helvetica;
+           font-size:50px;
+          }
+        </style>
   </head>
   <body>
     <div class="wrapper row vert cent-v">
@@ -27,6 +33,8 @@
       </header>
       <div class="main col center">
         <h2><i> We are a film group based in Wellington</i></h2>
+        <h1> Upcoming Movies</h1>
+        <img src="/assets/images/drunk police 2 poster-1.jpg"</img>
       </div>
       <footer class="footer col">
         
