--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Home | Ninja Juce productions</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <style>
-        h1 {
+        #upcoming-movies {
            font-family:helvetica;
            font-size:50px;
           }
@@ -33,7 +33,7 @@
       </header>
       <div class="main col center">
         <h2><i> We are a film group based in Wellington</i></h2>
-        <h1> Upcoming Movies</h1>
+        <h1 id="upcoming-movies"> Upcoming Movies</h1>
         <img src="/assets/images/drunk police 2 poster-1.jpg"</img>
       </div>
       <footer class="footer col">
