--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html>
 <head>
 <style>
-h1{font-size: 50px;
+h1{
+  font-size: 50px;
 }
+p{
+  font-size:35px;
+  }
+  </style>
+  </head>
 <body>
 <h1>Whoops!</h1>
 <p>Soz. This page is under contruction. lol</p>
 </body>
+</html>
