--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="wrapper row vert cent-v">
       <header class="header col row vert">
         <div class="col top row vert cent">
-          <img src="/assets/images/NJP-Logo.png" class="col topimg"/>
+          <img src="/assets/images/the new logo.png" class="col topimg"/>
           <h1 class="col">Welcome to the official website of Ninja-juce productions</h1>
         </div>
         <nav class="nav col cent">
