--- a/animation.html
+++ b/animation.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 <div class="col top row vert cent">
-          <img src="/assets/images/NJP-Logo.png" class="col topimg">
+          <img src="/assets/images/the new logo.png" class="col topimg">
           <h1 class="col">Welcome to the official website of Ninja-juce productions</h1>
         </div>
   <nav class="nav col cent">
