--- a/merch.html
+++ b/merch.html
@@ -13,7 +13,7 @@
     <div class="wrapper row vert cent-v">
       <header class="header col row vert">
         <div class="col top row vert cent">
-          <img src="/assets/images/NJP-Logo.png" class="col topimg"/>
+          <img src="/assets/images/the new logo.png" class="col topimg"/>
           <h1 class="col">Welcome to the official website of Ninja-juce productions</h1>
         </div>
         <nav class="nav col cent">
@@ -32,9 +32,7 @@
           <h3>Merch</h3>
         </div>
         <div class="col cent contentArticle">
-          <p>We have some <stron>Epic merch</stong>. Go get it! <br/>
-            <a class="link" href="https://edaz.threadless.com/designs/ninja-juce-productions-t-shirt" target="_blank">
-              <img src="/assets/images/njp-t-shirt-landscape-new-product.png" title="New t-shirt out now" alt="NJP t-shirt" style="height: 40vh;"/>
+          <p>We have some <strong>Epic merch</strong>. Coming soon </br>
             </a>
           </p>
         </div>
