added the copyright at the end of the page

--- a/404.html
+++ b/404.html
@@ -32,5 +32,5 @@
           <a href="/animation.html" class="link">Animation</a>
         </nav>
       </header>
-   
+    <p>Copyright (c) 2020 NinjaJuce Productions</p>
    
