--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -2,5 +2,5 @@
 <html>
 <h1>My Portfolio</h1> 
   <a href="animations.html" class="link">animation portfolio</a>
-<p>This is where I put either school/work/unfinished projects here before being released on my website</h1>
+<p>This is where I put either school/work/unfinished projects here before being released on my website</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/n_3ycY6WJis" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
