--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       
       </div>
       <footer class="footer col">
-        
+       <p>Copyright (c) 2020 NinjaJuce Productions</p>
       </footer>
     </div>
   </body>
