--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <p class="bio">Originally founded in 2018 (Operations didn't begin till 2019). <br>Ninja juce productions is a film company based in Wellington, New Zealand. Founded by William Ormsby McInnes.</p>
       </div>
       <footer class="footer col">
-        
+          <p>Copyright (c) 2020 NinjaJuce Productions</p>
       </footer>
     </div>
   </body>
