--- a/team.html
+++ b/team.html
@@ -29,7 +29,7 @@
         <h2><i> We are a film group based in Wellington</i></h2>
       </div>
       <footer class="footer col">
-        
+         <p>Copyright (c) 2020 NinjaJuce Productions</p> 
       </footer>
     </div>
   </body>
