--- a/films.html
+++ b/films.html
@@ -40,5 +40,8 @@
           <h3>A journey far from home</h3>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/ZvMSscC8zKM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          </div>
+          <footer class="footer col">
+              <p>Copyright (c) 2020 NinjaJuce Productions</p>
+           </footer>
   </body>
 </html>
